# nordic44

./: .gitignore  README.md  pyproject.toml
nordic44/: classes.py  utils.py
notebooks/: excercise.ipynb  substations_geographical_regions.html
